Bug with overflowing contact flex div

--- a/css/contact.css
+++ b/css/contact.css
@@ -20,7 +20,8 @@
 .contact-info {
     width: 65%;
     text-align: center;
-    gap: 2.4rem;
+    gap: 2.4rem;    
+    min-width: 0;
 }
 
 .contact-box {
